[add] admin.projects.show and admin.type_projects

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -36,6 +36,6 @@ aside{
     input{
         border: none;
         outline: none;
-        background-color: #d1e7dd;
+        /* background-color: #d1e7dd; */
     }
 }
